--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>Popular</button>
 
                 <div>
-                    <img src="images/Vadrox1.png" alt="" />
+                    <img src="Images/Vadrox1.png" alt="" />
                     <div>
                         <p>Renee Gomez</p>
                         <span>14 Friends</span>
@@ -39,7 +39,7 @@
                 </div>
                 
                 <div>
-                    <img src="images/Vadrox2.png" alt="" />
+                    <img src="Images/Vadrox2.png" alt="" />
                     <div>
                         <p>Malivai Washington</p>
                         <span>10 Friends</span>
@@ -47,7 +47,7 @@
                 </div>
                     
                 <div>
-                    <img src="images/Vadrox3.png" alt="" />
+                    <img src="Images/Vadrox3.png" alt="" />
                     <div>
                         <p>Dan</p>
                         <span>9 Friends</span>
@@ -55,7 +55,7 @@
                 </div>
 
                 <div>
-                    <img src="images/Vadrox4.png" alt="" />
+                    <img src="Images/Vadrox4.png" alt="" />
                     <div>
                         <p>Chynna Philips</p>
                         <span>9 Friends</span>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div>
-                    <img src="images/Vadrox5.png" alt="" />
+                    <img src="Images/Vadrox5.png" alt="" />
                     <div>
                         <p>Justin Duchscherer</p>
                         <span>8 Friends</span>
