--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
             <hr>
 
             <div>
-                <img src="images/Vadrox1.png" alt="Vadrox" />
-                <img src="images/Vadrox2.png" alt="Vadrox" />
-                <img src="images/Vadrox3.png" alt="Vadrox" />
-                <img src="images/Vadrox4.png" alt="Vadrox" />
-                <img src="images/Vadrox5.png" alt="Vadrox" />
-                <img src="images/Vadrox6.png" alt="Vadrox" />
-                <img src="images/Vadrox7.png" alt="Vadrox" />
-                <img src="images/Vadrox8.png" alt="Vadrox" />
-                <img src="images/Vadrox9.png" alt="Vadrox" />
-                <img src="images/Vadrox10.png" alt="Vadrox" />
-                <img src="images/Vadrox11.png" alt="Vadrox" />
-                <img src="images/Vadrox12.png" alt="Vadrox" />
-                <img src="images/Vadrox13.png" alt="Vadrox" />
-                <img src="images/Vadrox14.png" alt="Vadrox" />
-                <img src="images/Vadrox15.png" alt="Vadrox" />
+                <img src="Images/Vadrox1.png" alt="Vadrox" />
+                <img src="Images/Vadrox2.png" alt="Vadrox" />
+                <img src="Images/Vadrox3.png" alt="Vadrox" />
+                <img src="Images/Vadrox4.png" alt="Vadrox" />
+                <img src="Images/Vadrox5.png" alt="Vadrox" />
+                <img src="Images/Vadrox6.png" alt="Vadrox" />
+                <img src="Images/Vadrox7.png" alt="Vadrox" />
+                <img src="Images/Vadrox8.png" alt="Vadrox" />
+                <img src="Images/Vadrox9.png" alt="Vadrox" />
+                <img src="Images/Vadrox10.png" alt="Vadrox" />
+                <img src="Images/Vadrox11.png" alt="Vadrox" />
+                <img src="Images/Vadrox12.png" alt="Vadrox" />
+                <img src="Images/Vadrox13.png" alt="Vadrox" />
+                <img src="Images/Vadrox14.png" alt="Vadrox" />
+                <img src="Images/Vadrox15.png" alt="Vadrox" />
             </div>
         </aside>
         <!-- End Active Members -->
