--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <button>Alphaabctical</button>
 
             <div>
-                <img src="Images/image.jpg" alt="" />
+                <img src="Images/Image.jpg" alt="" />
                 <div>
                     <p>The Rourist</p>
                     <span>active 3 years, 8 months ago</span>
@@ -90,7 +90,7 @@
             </div>
             
             <div>
-                <img src="Images/image2.jpg" alt="" />
+                <img src="Images/Image2.jpg" alt="" />
                 <div>
                     <p>The Social Network</p>
                     <span>active 3 years, 8 months ago</span>
@@ -98,7 +98,7 @@
             </div>
                 
             <div>
-                <img src="Images/image3.jpg" alt="" />
+                <img src="Images/Image3.jpg" alt="" />
                 <div>
                     <p>Monsters, inc.</p>
                     <span>active 3 years, 8 months ago</span>
@@ -106,7 +106,7 @@
             </div>
 
             <div>
-                <img src="Images/image4.jpg" alt="" />
+                <img src="Images/Image4.jpg" alt="" />
                 <div>
                     <p>Elizabethan</p>
                     <span>active 3 years, 8 months ago</span>
@@ -145,7 +145,7 @@
         <aside class="schedule">
             <h3>The Schedule</h3>
 
-            <img src="images/Date.jpg" alt="" />
+            <img src="Images/Date.jpg" alt="" />
         </aside>
         <!-- End The Schedule -->
         </article>
