--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="description" content="Welcome to the community" />
         <title>Community</title>
-        <link rel="icon" href="images/icon.png" />
+        <link rel="icon" href="Images/icon.png" />
         <link rel="stylesheet" href="text.css" />
         <link rel="stylesheet" href="css/font-awesome.min.css" />
     </head>
